--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.1.2",
     "@angular/cdk": "^16.1.1",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
+    "@angular/common": "^16.1.2",
+    "@angular/compiler": "^16.1.2",
+    "@angular/core": "^16.1.2",
+    "@angular/forms": "^16.1.2",
     "@angular/material": "^16.1.1",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
-    "@angular/service-worker": "^16.1.0",
+    "@angular/platform-browser": "^16.1.2",
+    "@angular/platform-browser-dynamic": "^16.1.2",
+    "@angular/router": "^16.1.2",
+    "@angular/service-worker": "^16.1.2",
     "@auth0/auth0-angular": "^2.1.0",
     "@netlify/functions": "^1.6.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@popperjs/core": "^2.11.6",
     "airtable": "^0.12.1",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -31,7 +34,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "^16.1.0",
+    "@angular/compiler-cli": "^16.1.2",
+    "@angular/localize": "^16.1.2",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
