--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "airtable": "^0.12.1",
     "bootstrap": "^5.2.3",
     "http-server": "^14.1.1",
+    "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
