--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "web-push": "^3.6.7",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
