--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.6",
     "airtable": "^0.12.1",
     "bootstrap": "^5.2.3",
+    "googleapis": "^140.0.0",
     "http-server": "^14.1.1",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
