--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.2.3",
     "googleapis": "^140.0.0",
     "http-server": "^14.1.1",
+    "netlify-cli": "^18.0.3",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
